--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Vanilla Coding | Bootcamp Prep</title>
 </head>
+
 <body>
-  <img src="/assets/images/vc.png" alt="Vanilla Coding Logo" />
-  <h1>Carousel Project</h1>
+
+  <div>
+
+  </div>
+
 </body>
+
 </html>
