make a image-list

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
 <body>
 
-  <div>
+  <div class="window-box">
 
+  </div>
+
+  <div class="image-list">
+    <img src="assets/images/1.jpg" alt="kakao-friends">
+    <img src="assets/images/2.jpg" alt="kakao-friends">
+    <img src="assets/images/3.jpg" alt="kakao-friends">
+    <img src="assets/images/4.jpg" alt="kakao-friends">
+    <img src="assets/images/5.jpg" alt="kakao-friends">
   </div>
 
 </body>
