--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>Vanilla Coding | Bootcamp Prep</title>
+  <title>Space Travel</title>
 </head>
 
 <body>
 
   <div class="window-box">
-    <div id="image-list">
-      <img src="assets/images/1.jpg" alt="kakao-friends1">
-      <img src="assets/images/2.jpg" alt="kakao-friends2">
-      <img src="assets/images/3.jpg" alt="kakao-friends3">
-      <img src="assets/images/4.jpg" alt="kakao-friends4">
-      <img src="assets/images/5.jpg" alt="kakao-friends5">
-    </div>
+    <ul id="image-list">
+      <li>
+        <img src="assets/images/0.jpg">
+      </li>
+      <li>
+        <img src="assets/images/1.jpg">
+      </li>
+      <li>
+        <img src="assets/images/2.jpg">
+      </li>
+      <li>
+        <img src="assets/images/3.jpg">
+      </li>
+      <li>
+        <img src="assets/images/4.jpg">
+      </li>
+      <li>
+        <img src="assets/images/5.jpg">
+      </li>
+    </ul>
+  </div>
   </div>
 
   <div id="buttons">
