--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
   <div class="window-box">
     <ul id="image-list">
       <li>
@@ -31,17 +30,12 @@
       </li>
     </ul>
   </div>
-  </div>
 
   <div id="buttons">
     <button id="leftBtn">Before</button>
     <button id="rightBtn">After</button>
   </div>
 
-  <script src="app/index.js">
-  </script>
-
-
+  <script src="app/index.js"></script>
 </body>
-
 </html>
